login e cadastro funcionais

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Sistema de Gerenciamento de Biblioteca</title>
+    <title>EduTrade - Compra e Venda de materiais</title>
   </head>
   <body>
     <div id="root"></div>
